test to see if the body's height set to 100vh fixes the cover on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,10 +13,9 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
   height: 95vh;
   margin-top: -24px;
   margin-bottom: -50px;
@@ -29,6 +28,9 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
   height: 60vh;
   margin-top: -24px;
   margin-bottom: -50px;
@@ -39,10 +41,9 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
   height: 60vh;
   margin-top: -24px;
   margin-bottom: -50px;
@@ -53,10 +54,9 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
   height: 60vh;
   margin-top: -24px;
   margin-bottom: -50px;
@@ -67,10 +67,9 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
   height: 60vh;
   margin-top: -24px;
   margin-bottom: -50px;
